Slight Changes: Portfolio description alignment fixed

--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -235,7 +235,7 @@ button {
 .f-hor-nc {
     display: flex;
     align-content: center;
-    align-items: center;
+/*    align-items: center;*/
 }
 
 .f-hor-ver-nc {
